<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="searchViewModel"
            type="com.nhatminh.example.architecture.demoarchitecture.search.viewmodel.SearchViewModel" />

        <import type="android.view.View"/>
        <import type="com.nhatminh.example.architecture.demoarchitecture.model.STATE"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.view.MainActivity">

        <EditText
            android:id="@+id/etSearchQuery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btSearch"
            android:hint="Search github project..."
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/etSearchQuery"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            android:onClick="@{()->searchViewModel.searchGithubRepos(etSearchQuery.getText().toString())}"
            />

        <TextView
            android:id="@+id/tvCountRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/count_repos(searchViewModel.reposData.reposList.size())}"
            tools:text="Number of repos: "
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearchQuery"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRepos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvCountRepos"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="12dp" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            hidden="@{searchViewModel.reposData.state != STATE.LOADING}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>